{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 12,
  "lineage": "ac4f27cd-e6aa-13ee-2fef-13a3f95563fc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "CresolPOC_VPC_SecurityACL",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809395312771:network-acl/acl-0610aa619580a56de",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 80
              }
            ],
            "id": "acl-0610aa619580a56de",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 80
              }
            ],
            "owner_id": "809395312771",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-087308077d2494e14"
            ],
            "tags": {
              "Name": "CresolPOC_VPC_SecurityACL"
            },
            "vpc_id": "vpc-04afd77cc203261f2"
          },
          "dependencies": [
            "aws_subnet.CresolPOC_VPC_Subnet",
            "aws_vpc.CresolPOC_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "CresolPOC_VPC_RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0192a6b5f7a606e74",
            "owner_id": "809395312771",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "CresolPOC_VPC_RouteTable"
            },
            "vpc_id": "vpc-04afd77cc203261f2"
          },
          "dependencies": [
            "aws_vpc.CresolPOC_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "CresolPOC_VPC_Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c89ffb973198e28",
            "route_table_id": "rtb-0192a6b5f7a606e74",
            "subnet_id": "subnet-087308077d2494e14"
          },
          "dependencies": [
            "aws_route_table.CresolPOC_VPC_RouteTable",
            "aws_subnet.CresolPOC_VPC_Subnet",
            "aws_vpc.CresolPOC_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "CresolPOC_VPC_SecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809395312771:security-group/sg-0c66afad9976dd4c4",
            "description": "CresolPOC_VPC_Security_Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c66afad9976dd4c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "CresolPOC_VPC_Security_Group",
            "name_prefix": null,
            "owner_id": "809395312771",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "CresolPOC_VPC_SecurityGroup",
              "Name": "CresolPOC_VPC_SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-04afd77cc203261f2"
          },
          "dependencies": [
            "aws_vpc.CresolPOC_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "CresolPOC_VPC_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809395312771:subnet/subnet-087308077d2494e14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-087308077d2494e14",
            "map_public_ip_on_launch": true,
            "owner_id": "809395312771",
            "tags": {
              "Name": "CresolPOC_VPC_Subnet"
            },
            "vpc_id": "vpc-04afd77cc203261f2"
          },
          "dependencies": [
            "aws_vpc.CresolPOC_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "CresolPOC_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809395312771:vpc/vpc-04afd77cc203261f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f26586b8ba087a66",
            "default_route_table_id": "rtb-00b2e66eeddc5458a",
            "default_security_group_id": "sg-0fae2580f8e995293",
            "dhcp_options_id": "dopt-2033f659",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04afd77cc203261f2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00b2e66eeddc5458a",
            "owner_id": "809395312771",
            "tags": {
              "Name": "CresolPOC_VPC"
            }
          }
        }
      ]
    }
  ]
}